force-app/main/default/objects/Passport__c/Passport__c.object-meta.xml
<CustomObject>
    <description>An issued passport booklet. Deliberately linked to its application by lookup rather than master-detail: a booklet must outlive the application record, and cascade-deleting a travel document would be unacceptable.</description>
    <label>Passport</label>
    <nameField>
        <label>Passport Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>