force-app/main/default/objects/Passport__c/fields/Days_To_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Expiry__c</fullName>
    <formula>IF(ISBLANK(Date_of_Expiry__c), 0, Date_of_Expiry__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>