force-app/main/default/objects/Passport__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Mirrors the passport number to give it database-level uniqueness. Salesforce cannot enforce uniqueness on the standard Name field, so the booklet number is written here as well and this field carries the unique constraint.</inlineHelpText>
    <label>External Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>