force-app/main/default/objects/Passport__c/fields/File_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Number__c</fullName>
    <label>File Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>