force-app/main/default/objects/Passport__c/fields/Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Holder_Name__c</fullName>
    <formula>TRIM(Application__r.First_Name__c &amp; " " &amp; IF(ISBLANK(Application__r.Middle_Name__c), "", Application__r.Middle_Name__c &amp; " ") &amp; Application__r.Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Holder Name</label>
    <type>Text</type>
</CustomField>