force-app/main/default/objects/Passport__c/recordTypes/Official.recordType-meta.xml
<RecordType>
    <fullName>Official</fullName>
    <active>true</active>
    <description>White official passport for government deputation.</description>
    <label>Official</label>
</RecordType>