force-app/main/default/objects/Passport__c/recordTypes/Ordinary.recordType-meta.xml
<RecordType>
    <fullName>Ordinary</fullName>
    <active>true</active>
    <description>Ordinary (navy) passport for general travel.</description>
    <label>Ordinary</label>
</RecordType>