force-app/main/default/objects/Passport__c/validationRules/Active_Requires_Issue_And_Expiry_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Requires_Issue_And_Expiry_Dates</fullName>
    <active>true</active>
    <description>An Active booklet must carry its validity window. Other statuses (Cancelled, Lost, Reissued) may legitimately be recorded without dates.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Active&quot;), OR( ISBLANK(Date_of_Issue__c), ISBLANK(Date_of_Expiry__c) ) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>An Active passport needs both a Date of Issue and a Date of Expiry.</errorMessage>
</ValidationRule>