force-app/main/default/objects/Passport__c/validationRules/Expiry_After_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_After_Issue</fullName>
    <active>true</active>
    <description>Days_To_Expiry__c, Is_Expired__c and Is_Expiring_Soon__c are all derived from these dates; an inverted range makes every renewal report wrong.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Date_of_Issue__c)), NOT(ISBLANK(Date_of_Expiry__c)), Date_of_Expiry__c &lt;= Date_of_Issue__c )</errorConditionFormula>
    <errorDisplayField>Date_of_Expiry__c</errorDisplayField>
    <errorMessage>Date of Expiry must be after Date of Issue.</errorMessage>
</ValidationRule>